<resources>
    <string name="app_name">SearchMovies</string>
    <string name="description_movie_rating">Рейтинг: </string>
    <string name="description_movieD_date">Дата выхода: </string>
    <string name="home">Главная</string>
    <string name="search">Поиск</string>
    <string name="favorite">Избранное</string>
    <string name="settings">Настройки</string>
    <string name="include_adult">Фильмы 18+</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="need_permissions_to_read_contacts">Необходимо разрешение для контактов</string>
    <string name="contacts">Контакты</string>
    <string name="maps">Карты</string>
    <string name="need_permissions_to_find_location">Необходимо разрешение геолокации</string>
</resources>