<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_home"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/home"/>

    <item
        android:id="@+id/menu_search"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/search"/>

    <item
        android:id="@+id/menu_maps"
        android:icon="@drawable/ic_baseline_map_24"
        android:title="@string/maps"/>

    <item
        android:id="@+id/menu_settings"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/settings"/>

    <item
        android:id="@+id/menu_contacts"
        android:icon="@drawable/ic_baseline_contacts_24"
        android:title="@string/contacts"/>
</menu>